Last Updated on Saturday

--- a/templates/blog/upload_post.html
+++ b/templates/blog/upload_post.html
@@ -231,6 +231,12 @@ select {
             {{ form.class_date }}
         </div>
 
+
+        <div class="form-group">
+            <label for="{{ form.class_date.id_for_label }}">تاریخ کلاس</label>
+            {{ form.class_date }}
+        </div>
+
         <div class="form-group">
             <label for="{{ form.teacher_delay.id_for_label }}">تاخیر استاد(در صورت نیاز)</label>
             {{ form.teacher_delay }}
